--- a/assets/supervisord.conf
+++ b/assets/supervisord.conf
@@ -13,7 +13,7 @@ prompt = supervisor
 
 [program:xvnc]
 priority=0
-command=/usr/bin/Xvnc -desktop "Metatrader" -rfbport 5900 -rfbauth /root/.config/tigervnc/passwd -securitytypes VncAuth,TLSVnc -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -AcceptSetDesktopSize -SendCutText -AcceptCutText :0
+command=/usr/bin/Xvnc -desktop "Metatrader" -rfbport 5900 -rfbauth /root/.config/tigervnc/passwd -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -AcceptSetDesktopSize -SendCutText -AcceptCutText :0
 user=root
 autorestart=true
 stdout_logfile=/dev/fd/1
