swap to a user nobody ...

--- a/assets/supervisord.conf
+++ b/assets/supervisord.conf
@@ -1,9 +1,9 @@
 [supervisord]
-nodaemon=true
-user=root
-pidfile=/tmp/supervisord.pid
-logfile=/dev/fd/1
-logfile_maxbytes=0
+nodaemon = true
+user = nobody
+pidfile = /tmp/supervisord.pid
+logfile = /dev/fd/1
+logfile_maxbytes = 0
 
 [supervisorctl]
 serverurl = unix:///tmp/supervisor.sock
@@ -13,15 +13,15 @@ prompt = supervisor
 
 [program:xvnc]
 priority=0
-command=/usr/bin/Xvnc -desktop "Metatrader" -rfbport 5900 -rfbauth /root/.config/tigervnc/passwd -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -AcceptSetDesktopSize -SendCutText -AcceptCutText :0
-user=root
+command=/usr/bin/Xvnc -desktop "Metatrader" -rfbport 5900 -rfbauth /opt/app/.config/tigervnc/passwd -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -AcceptSetDesktopSize -SendCutText -AcceptCutText :0
+user = nobody
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:metatrader]
-directory=/root/Metatrader
+directory=/opt/app/Metatrader
 command=/usr/bin/wine64 terminal64.exe /portable /config:credentials.ini
 #command=/usr/bin/wine64 /root/Metatrader/terminal.exe /portable
 autorestart=true
