--- a/assets/supervisord.conf
+++ b/assets/supervisord.conf
@@ -22,7 +22,7 @@ redirect_stderr=true
 
 [program:metatrader]
 directory=/opt/app/Metatrader
-command=/usr/bin/wine64 terminal64.exe /portable /config:credentials.ini
+command=/usr/bin/wine terminal64.exe /portable /config:credentials.ini
 #command=/usr/bin/wine64 /root/Metatrader/terminal.exe /portable
 autorestart=true
 stdout_logfile=/dev/fd/1
